# Policy-and-SOP-Assistant

./: .gitignore  README.md  app.py  config.py  pyproject.toml
agent/: __init__.py  tools.py
backend/: api.py
data/: acceptable_use_policy.txt  customer_data_privacy_policy.txt  employee_onboarding_sop.txt  network_outage_sop.txt
docs/: ARCHITECTURE_AND_ROADMAP.md
ingestion/: __init__.py  chunker.py  embedder.py  loader.py  pipeline.py  scraper.py
rag/: __init__.py  generator.py  prompts.py  retriever.py
vector_store/: __init__.py  store.py
